--- a/theonefile-networkening.html
+++ b/theonefile-networkening.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
  <html lang="en" style="--panel: #0b0e13; --panel-alt: #10141b; --accent: #4fd1c5; --danger: #f56565; --text-main: #e2e8f0; --text-soft: #94a3b8; --topbar-bg: rgba(9, 12, 20, 0.9); --topbar-border: #1f2533; --topbar-height: 100px; --sidebar-width: 435px; --mobile-footer-height: 20vh; --draw-toolbar-height: 45px; --sidebar-bg: #10141b; --btn-bg: #0b0e13; --btn-text: #e2e8f0; --tag-fill: #1e293b; --tag-text: #e2e8f0; --tag-border: #475569; --input-bg: #0b0e13; --input-text: #e2e8f0; --input-border: #1f2937; --input-font: Inter, system-ui, sans-serif; --input-font-size: 14px; --toolbar-bg: #0f172a; --toolbar-border: #1f2937; --toolbar-text: #94a3b8; --toolbar-btn-bg: #0b0e13; --toolbar-btn-text: #e2e8f0; --minimap-dots: #94a3b8; --canvas-hint-bg: #0f172a; --canvas-hint-color: #94a3b8; --node-fill: #1e293b; --node-stroke: #475569; --node-title: #e2e8f0; --node-sub: #94a3b8; --node-title-size: 18px; --node-sub-size: 13px; --node-font: Inter, system-ui, sans-serif; --default-edge: #475569; --selection-handle: #f59e0b; --selection-handle-size: 8px; --group-indicator: #4fd1c5;"><head>
     <meta charset="UTF-8">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
@@ -1683,6 +1683,25 @@
         </div>
       </div>
     </div>
+    <div class="modal" id="port-map-modal">
+      <div class="modal-content" style="max-width: 900px;">
+        <h3>Port Map</h3>
+        <p style="font-size: 13px; color: var(--text-soft); margin-bottom: 15px;">All connections with port assignments</p>
+        <div style="display: flex; gap: 8px; margin-bottom: 10px;">
+          <input type="text" id="port-map-search" placeholder="Search devices or ports..." style="flex: 1; min-width: 200px; padding: 8px; background: var(--panel-alt); border: 1px solid var(--edge-main); border-radius: 6px; color: var(--text-main);">
+          <select id="port-map-filter" style="padding: 8px; background: var(--panel-alt); border: 1px solid var(--edge-main); border-radius: 6px; color: var(--text-main);">
+            <option value="all">All Connections</option>
+            <option value="with-ports">With Ports Only</option>
+            <option value="without-ports">Missing Ports</option>
+          </select>
+        </div>
+        <div id="port-map-table" style="max-height: 450px; overflow-y: auto; margin-bottom: 15px;"></div>
+        <div style="display: flex; gap: 8px;">
+          <button class="btn-save" onclick="exportPortMap()">Export CSV</button>
+          <button class="btn-cancel" id="port-map-modal-close">Close</button>
+        </div>
+      </div>
+    </div>
     <div class="modal" id="secrets-modal">
       <div class="modal-content" style="max-width: 600px;">
         <h3>Notes</h3>
@@ -2503,14 +2522,15 @@
         <button id="back-to-topology-btn" title="Exit rack view and return to topology" style="padding: 6px 12px;background: var(--accent);color: var(--bg);border: none;border-radius: 6px;cursor: pointer;font-size: 14px;font-weight: 600;display: none;">← Back to Topology</button>
         <button id="add-node-btn" class="save-btn" title="Add new node" style="background: var(--accent)">+ Node</button>
         <button id="add-rack-btn" class="save-btn" title="Add new rack" style="background: var(--accent); margin-left: 8px;">+ Rack</button>
-        <button id="undo-btn" title="Undo (Ctrl+Z)" style="padding: 6px 12px;background: var(--btn-bg);color: var(--btn-text);border: 1px solid var(--edge-main);border-radius: 6px;cursor: pointer;font-size: 14px;font-weight: 600;" disabled="">↶</button>
-        <button id="redo-btn" title="Redo (Ctrl+Y)" style="padding: 6px 12px;background: var(--btn-bg);color: var(--btn-text);border: 1px solid var(--edge-main);border-radius: 6px;cursor: pointer;font-size: 14px;font-weight: 600;" disabled="">↷</button>
+        <button id="undo-btn" title="Undo (Ctrl+Z)" style="padding: 6px 12px; background: var(--btn-bg); color: var(--btn-text); border: 1px solid var(--edge-main); border-radius: 6px; cursor: pointer; font-size: 14px; font-weight: 600; opacity: 1;">↶</button>
+        <button id="redo-btn" title="Redo (Ctrl+Y)" style="padding: 6px 12px; background: var(--btn-bg); color: var(--btn-text); border: 1px solid var(--edge-main); border-radius: 6px; cursor: pointer; font-size: 14px; font-weight: 600; opacity: 0.5;" disabled="">↷</button>
 <input type="text" id="search-nodes" placeholder="Search nodes..." title="Search by name, IP, MAC, role, or tag" style="padding: 6px 12px;background: var(--input-bg);color: var(--input-text);border: 1px solid var(--input-border);border-radius: 6px;font-family: var(--input-font);font-size: var(--input-font-size);width: 180px;">
         <button id="check-all-ping-btn" title="Check status of all enabled nodes" style="padding: 6px 12px;background: var(--btn-bg);color: var(--btn-text);border: 1px solid var(--edge-main);border-radius: 6px;cursor: pointer;font-size: 14px;font-weight: 600">Check Pings</button>
         <button id="layers-btn" title="Toggle layer visibility" style="padding: 6px 12px;background: var(--btn-bg);color: var(--btn-text);border: 1px solid var(--edge-main);border-radius: 6px;cursor: pointer;font-size: 14px;font-weight: 600;">Layers</button>
         <button id="tabs-btn" title="Manage document tabs" style="padding: 6px 12px;background: var(--btn-bg);color: var(--btn-text);border: 1px solid var(--edge-main);border-radius: 6px;cursor: pointer;font-size: 14px;font-weight: 600;">Tabs</button>
         <button id="rollback-btn" title="View version history" style="padding: 6px 12px;background: var(--btn-bg);color: var(--btn-text);border: 1px solid var(--edge-main);border-radius: 6px;cursor: pointer;font-size: 14px;font-weight: 600;">Snapshots</button>
         <button id="audit-log-btn" title="View audit log" style="padding: 6px 12px;background: var(--btn-bg);color: var(--btn-text);border: 1px solid var(--edge-main);border-radius: 6px;cursor: pointer;font-size: 14px;font-weight: 600;">Audit</button>
+        <button id="port-map-btn" title="View all port connections" style="padding: 6px 12px;background: var(--btn-bg);color: var(--btn-text);border: 1px solid var(--edge-main);border-radius: 6px;cursor: pointer;font-size: 14px;font-weight: 600;">Ports</button>
         <button id="secrets-btn" title="Manage encrypted notes" style="padding: 6px 12px;background: var(--btn-bg);color: var(--btn-text);border: 1px solid var(--edge-main);border-radius: 6px;cursor: pointer;font-size: 14px;font-weight: 600;">Notes</button>
         <button onclick="screenshotCanvas()" title="Export canvas as PNG image" style="padding: 6px 12px;background: var(--btn-bg);color: var(--btn-text);border: 1px solid var(--edge-main);border-radius: 6px;cursor: pointer;font-size: 14px;font-weight: 600;">PNG</button>
         <button onclick="exportCanvasSVG()" title="Export canvas as SVG vector" style="padding: 6px 12px;background: var(--btn-bg);color: var(--btn-text);border: 1px solid var(--edge-main);border-radius: 6px;cursor: pointer;font-size: 14px;font-weight: 600;">SVG</button>
@@ -3058,7 +3078,7 @@
           </div>
           <button id="delete-text" style="margin-top: 15px;padding: 10px 16px;background: var(--danger);color: #fff;border: none;border-radius: 6px;cursor: pointer;font-size: clamp(14px, 1.6vw, 18px);font-weight: 600;width: 100%;">Delete Text</button>
         </div>
-     <details class="style-section">
+     <details class="style-section" open="">
           <summary>Page Layout</summary>
           <div class="style-content">
             <div style="padding: 12px; background: var(--panel-alt); border-radius: 6px; color: var(--text-soft); font-size: 13px; line-height: 1.6;">
@@ -3776,7 +3796,7 @@
           const coarse = matchMedia("(pointer: coarse)").matches;
           const width = window.innerWidth <= 900;
           const portrait = matchMedia("(orientation: portrait)").matches;
-          this.isMobile = coarse && (width || portrait);
+          this.isMobile = coarse;
           return this.isMobile;
         },
         applyInitialCollapse() {
@@ -6986,7 +7006,7 @@ poly.style.stroke = edge.color || PAGE_STATE.defaultEdge || "#475569";
            longPressTriggered = false;
           }
          }
-        });
+        }, { passive: true });
          g.addEventListener("mousedown", (e) => {
           if (isViewOnly()) return;
           if (e.button === 2) {
@@ -11279,7 +11299,8 @@ handle.setAttribute("r", PAGE_STATE.selectionHandleSize || 8);
         canvasState.zoom = targetZoom;
         canvasState.panX = centerX - (CANVAS_WIDTH / targetZoom) / 2;
         canvasState.panY = centerY - (CANVAS_HEIGHT / targetZoom) / 2;
-        forgeTheTopology();
+		// forgeTheTopology(); getting ready to implement new core canvas performance system
+        updateViewBox();
       }
       function toggleLockSelected() {
         const nodesToToggle = selectedNodes.size > 0
@@ -11960,6 +11981,67 @@ if (searchInput) {
            auditLogModal.classList.remove("active");
          });
        }
+	   const portMapBtn = document.getElementById("port-map-btn");
+      const portMapModal = document.getElementById("port-map-modal");
+      const portMapClose = document.getElementById("port-map-modal-close");
+      const portMapSearch = document.getElementById("port-map-search");
+      const portMapFilter = document.getElementById("port-map-filter");
+      function renderPortMap() {
+        const container = document.getElementById("port-map-table");
+        const search = (document.getElementById("port-map-search")?.value || "").toLowerCase();
+        const filter = document.getElementById("port-map-filter")?.value || "all";
+        let edges = EDGE_DATA.list || [];
+        if (filter === "with-ports") edges = edges.filter(e => e.fromPort || e.toPort);
+        if (filter === "without-ports") edges = edges.filter(e => !e.fromPort && !e.toPort);
+        if (search) {
+          edges = edges.filter(e => {
+            const fromName = (NODE_DATA[e.from]?.name || e.from || "").toLowerCase();
+            const toName = (NODE_DATA[e.to]?.name || e.to || "").toLowerCase();
+            return fromName.includes(search) || toName.includes(search) || (e.fromPort || "").toLowerCase().includes(search) || (e.toPort || "").toLowerCase().includes(search) || (e.notes || []).join(" ").toLowerCase().includes(search);
+          });
+        }
+        if (edges.length === 0) {
+          container.innerHTML = '<div style="text-align: center; padding: 40px; color: var(--text-soft);">No connections found</div>';
+          return;
+        }
+        let html = '<table style="width: 100%; border-collapse: collapse; font-size: 13px;">';
+        html += '<thead><tr style="background: var(--panel-alt); position: sticky; top: 0;"><th style="padding: 10px; text-align: left; border-bottom: 1px solid var(--edge-main);">From Device</th><th style="padding: 10px; text-align: left; border-bottom: 1px solid var(--edge-main);">From Port</th><th style="padding: 10px; text-align: left; border-bottom: 1px solid var(--edge-main);">To Device</th><th style="padding: 10px; text-align: left; border-bottom: 1px solid var(--edge-main);">To Port</th><th style="padding: 10px; text-align: left; border-bottom: 1px solid var(--edge-main);">Notes</th></tr></thead><tbody>';
+        edges.forEach(e => {
+          const fromName = NODE_DATA[e.from]?.name || e.from;
+          const toName = NODE_DATA[e.to]?.name || e.to;
+          const notes = (e.notes || []).join(", ");
+          html += `<tr style="border-bottom: 1px solid var(--edge-main);"><td style="padding: 10px; cursor: pointer; text-decoration: underline;" onclick="document.getElementById('port-map-modal').classList.remove('active'); claimTheImmortal('${e.from}'); focusOnSelected()">${fromName}</td><td style="padding: 10px; font-family: monospace; color: var(--accent); cursor: pointer;" onclick="document.getElementById('port-map-modal').classList.remove('active'); selectTheConnection('${e.id}'); focusOnSelected()">${e.fromPort || "-"}</td><td style="padding: 10px; cursor: pointer; text-decoration: underline;" onclick="document.getElementById('port-map-modal').classList.remove('active'); claimTheImmortal('${e.to}'); focusOnSelected()">${toName}</td><td style="padding: 10px; font-family: monospace; color: var(--accent); cursor: pointer;" onclick="document.getElementById('port-map-modal').classList.remove('active'); selectTheConnection('${e.id}'); focusOnSelected()">${e.toPort || "-"}</td><td style="padding: 10px; color: var(--text-soft); font-size: 12px;">${notes || "-"}</td></tr>`;
+        });
+        html += '</tbody></table>';
+        container.innerHTML = html;
+      }
+      window.exportPortMap = function() {
+        let csv = "From Device,From Port,To Device,To Port,Notes\n";
+        (EDGE_DATA.list || []).forEach(e => {
+          const fromName = (NODE_DATA[e.from]?.name || e.from || "").replace(/,/g, ";");
+          const toName = (NODE_DATA[e.to]?.name || e.to || "").replace(/,/g, ";");
+          const notes = (e.notes || []).join("; ").replace(/,/g, ";");
+          csv += `"${fromName}","${e.fromPort || ""}","${toName}","${e.toPort || ""}","${notes}"\n`;
+        });
+        const blob = new Blob([csv], { type: "text/csv" });
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement("a");
+        a.href = url;
+        a.download = "port-map.csv";
+        a.click();
+        URL.revokeObjectURL(url);
+      };
+      if (portMapBtn && portMapModal) {
+        portMapBtn.addEventListener("click", () => { renderPortMap(); portMapModal.classList.add("active"); });
+      }
+      if (portMapClose && portMapModal) {
+        portMapClose.addEventListener("click", () => { portMapModal.classList.remove("active"); });
+      }
+      if (portMapSearch) { portMapSearch.addEventListener("input", renderPortMap); }
+      if (portMapFilter) { portMapFilter.addEventListener("change", renderPortMap); }
+      if (portMapModal) {
+        portMapModal.addEventListener("click", (e) => { if (e.target === portMapModal) portMapModal.classList.remove("active"); });
+      }
        if (auditLogModal) {
          auditLogModal.addEventListener("click", (e) => {
            if (e.target === auditLogModal) {
@@ -12571,14 +12653,35 @@ if (searchInput) {
           return;
         }
         if (!confirm(`Delete tab "${documentTabs[index].name}"?`)) return;
+        const wasCurrentTab = (index === currentTabIndex);
         documentTabs.splice(index, 1);
         if (currentTabIndex >= documentTabs.length) {
           currentTabIndex = documentTabs.length - 1;
+        } else if (index < currentTabIndex) {
+          currentTabIndex--;
         }
-        if (currentTabIndex === index) {
-          switchTab(currentTabIndex);
+        if (wasCurrentTab) {
+          const newTab = documentTabs[currentTabIndex];
+          NODE_DATA = JSON.parse(JSON.stringify(newTab.nodes));
+          EDGE_DATA = JSON.parse(JSON.stringify(newTab.edges));
+          savedPositions = JSON.parse(JSON.stringify(newTab.positions));
+          savedSizes = JSON.parse(JSON.stringify(newTab.sizes));
+          savedStyles = JSON.parse(JSON.stringify(newTab.styles));
+          EDGE_LEGEND = JSON.parse(JSON.stringify(newTab.legend));
+          RECT_DATA = JSON.parse(JSON.stringify(newTab.rects));
+          TEXT_DATA = JSON.parse(JSON.stringify(newTab.texts));
+          PAGE_STATE = Object.assign({}, DEFAULT_PAGE_STATE, newTab.pageState || {});
+          wieldThePower();
+          forgeTheTopology();
+          currentNodeId = null;
+          currentEdgeId = null;
+          currentTextId = null;
+          document.getElementById("node-panel").style.display = "none";
+          document.getElementById("edge-panel").style.display = "none";
+          document.getElementById("text-panel").style.display = "none";
         }
         displayTabs();
+        logAuditEvent("tab", `Deleted tab`);
       }
       function displayTabs() {
         const listEl = document.getElementById("tabs-list");
@@ -12593,7 +12696,7 @@ if (searchInput) {
               <div class="tab-stats">${nodeCount} nodes • ${edgeCount} connections</div>
               <div class="tab-actions">
                 <button class="btn-cancel" onclick="event.stopPropagation(); renameTab(${index})" title="Rename tab">✏️</button>
-                ${documentTabs.length > 1 ? '<button class="btn-cancel" onclick="event.stopPropagation(); deleteTab(${index})" title="Delete tab">🗑️</button>' : ''}
+                ${documentTabs.length > 1 ? '<button class="btn-cancel" onclick="event.stopPropagation(); deleteTab(' + index + ')" title="Delete tab">🗑️</button>' : ''}
               </div>
             </div>
           `;
