--- a/the-one-file.html
+++ b/the-one-file.html
@@ -7043,33 +7043,32 @@
        modal.classList.add("active");
        input.focus();
        input.select();
+       const cleanup = () => {
+        modal.classList.remove("active");
+        saveBtn.removeEventListener("click", handleSave);
+        cancelBtn.removeEventListener("click", handleCancel);
+        input.removeEventListener("keypress", handleEnter);
+        modal.removeEventListener("click", bgHandler);
+       };
        const handleSave = () => {
         if (input.value.trim()) {
          onSave(input.value.trim());
         }
-        modal.classList.remove("active");
-        saveBtn.removeEventListener("click", handleSave);
-        cancelBtn.removeEventListener("click", handleCancel);
-        input.removeEventListener("keypress", handleEnter);
+        cleanup();
        };
        const handleCancel = () => {
-        modal.classList.remove("active");
-        saveBtn.removeEventListener("click", handleSave);
-        cancelBtn.removeEventListener("click", handleCancel);
-        input.removeEventListener("keypress", handleEnter);
+        cleanup();
        };
        const handleEnter = (e) => {
         if (e.key === "Enter") handleSave();
        };
+       const bgHandler = (e) => {
+        if (e.target === modal) handleCancel();
+       };
        saveBtn.addEventListener("click", handleSave);
        cancelBtn.addEventListener("click", handleCancel);
        input.addEventListener("keypress", handleEnter);
-       modal.addEventListener("click", function bgHandler(e) {
-        if (e.target === modal) {
-         handleCancel();
-         modal.removeEventListener("click", bgHandler);
-        }
-       });
+       modal.addEventListener("click", bgHandler);
       }
       function challengeTheImmortal(message, onConfirm) {
        const modal = document.getElementById("confirm-modal");
@@ -7078,25 +7077,25 @@
        const cancelBtn = document.getElementById("confirm-cancel");
        messageEl.textContent = message;
        modal.classList.add("active");
+	   const cleanup = () => {
+        modal.classList.remove("active");
+        deleteBtn.removeEventListener("click", handleConfirm);
+        cancelBtn.removeEventListener("click", handleCancel);
+        modal.removeEventListener("click", bgHandler);
+       };
        const handleConfirm = () => {
         onConfirm();
-        modal.classList.remove("active");
-        deleteBtn.removeEventListener("click", handleConfirm);
-        cancelBtn.removeEventListener("click", handleCancel);
+        cleanup();
        };
        const handleCancel = () => {
-        modal.classList.remove("active");
-        deleteBtn.removeEventListener("click", handleConfirm);
-        cancelBtn.removeEventListener("click", handleCancel);
+        cleanup();
+       };
+       const bgHandler = (e) => {
+        if (e.target === modal) handleCancel();
        };
        deleteBtn.addEventListener("click", handleConfirm);
        cancelBtn.addEventListener("click", handleCancel);
-       modal.addEventListener("click", function bgHandler(e) {
-        if (e.target === modal) {
-         handleCancel();
-         modal.removeEventListener("click", bgHandler);
-        }
-       });
+       modal.addEventListener("click", bgHandler);
       }
       const pageTitleEl = document.getElementById("page-title");
       if (pageTitleEl) {
@@ -9704,61 +9703,65 @@
        if (!node) return;
        document.getElementById("modal-title").textContent = "Edit Rack Unit";
        document.getElementById("modal-input").value = node.rackUnit || "";
-       document.getElementById("edit-modal").style.display = "flex";
+       document.getElementById("edit-modal").style.display = "";
+       document.getElementById("edit-modal").classList.add("active");
        document.getElementById("modal-input").focus();
+	   const modal = document.getElementById("edit-modal");
+       const cleanup = () => {
+        modal.classList.remove("active");
+        document.getElementById("modal-save").removeEventListener("click", saveHandler);
+        document.getElementById("modal-cancel").removeEventListener("click", cancelHandler);
+        modal.removeEventListener("click", bgHandler);
+       };
        const saveHandler = () => {
         pushUndo("edit rack");
         const value = document.getElementById("modal-input").value.trim();
         node.rackUnit = value;
-        document.getElementById("edit-modal").style.display = "none";
+        cleanup();
         claimTheImmortal(id);
-        document.getElementById("modal-save").removeEventListener("click", saveHandler);
-        document.getElementById("modal-cancel").removeEventListener("click", cancelHandler);
        };
        const cancelHandler = () => {
-        document.getElementById("edit-modal").style.display = "none";
-        document.getElementById("modal-save").removeEventListener("click", saveHandler);
-        document.getElementById("modal-cancel").removeEventListener("click", cancelHandler);
+        cleanup();
+       };
+       const bgHandler = (e) => {
+        if (e.target === modal) cancelHandler();
        };
        document.getElementById("modal-save").addEventListener("click", saveHandler);
        document.getElementById("modal-cancel").addEventListener("click", cancelHandler);
-       document.getElementById("edit-modal").addEventListener("click", function bgHandler(e) {
-        if (e.target === document.getElementById("edit-modal")) {
-         cancelHandler();
-         document.getElementById("edit-modal").removeEventListener("click", bgHandler);
-        }
-       });
+       modal.addEventListener("click", bgHandler);
       }
       function editNodeUHeight(id) {
        const node = NODE_DATA[id];
        if (!node) return;
        document.getElementById("modal-title").textContent = "Edit U Height";
        document.getElementById("modal-input").value = node.uHeight || "1";
-       document.getElementById("edit-modal").style.display = "flex";
+       document.getElementById("edit-modal").style.display = "";
+       document.getElementById("edit-modal").classList.add("active");
        document.getElementById("modal-input").focus();
+	   const modal = document.getElementById("edit-modal");
+       const cleanup = () => {
+        modal.classList.remove("active");
+        document.getElementById("modal-save").removeEventListener("click", saveHandler);
+        document.getElementById("modal-cancel").removeEventListener("click", cancelHandler);
+        modal.removeEventListener("click", bgHandler);
+       };
        const saveHandler = () => {
         pushUndo("edit U height");
         const value = document.getElementById("modal-input").value.trim();
         node.uHeight = value;
-        document.getElementById("edit-modal").style.display = "none";
+        cleanup();
         claimTheImmortal(id);
         forgeTheTopology();
-        document.getElementById("modal-save").removeEventListener("click", saveHandler);
-        document.getElementById("modal-cancel").removeEventListener("click", cancelHandler);
        };
        const cancelHandler = () => {
-        document.getElementById("edit-modal").style.display = "none";
-        document.getElementById("modal-save").removeEventListener("click", saveHandler);
-        document.getElementById("modal-cancel").removeEventListener("click", cancelHandler);
+        cleanup();
+       };
+       const bgHandler = (e) => {
+        if (e.target === modal) cancelHandler();
        };
        document.getElementById("modal-save").addEventListener("click", saveHandler);
        document.getElementById("modal-cancel").addEventListener("click", cancelHandler);
-       document.getElementById("edit-modal").addEventListener("click", function bgHandler(e) {
-        if (e.target === document.getElementById("edit-modal")) {
-         cancelHandler();
-         document.getElementById("edit-modal").removeEventListener("click", bgHandler);
-        }
-       });
+       modal.addEventListener("click", bgHandler);
       }
       function updateEdgePortLabels(edgeId) {
        const edge = EDGE_DATA.list.find(e => e.id === edgeId);
